# calc

./: Cargo.toml  README.md
calc-core/: Cargo.toml
calc-core/pest/: calc.pest
calc-core/src/: ast.rs  lib.rs
