[package]
name = "calc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
from-pest = "0.3.1"
pest = { version = "2.5.2", features = ["serde", "pretty-print"] }
pest-ast = "0.3.3"
pest_derive = "2.5.2"
rust_decimal = "1.27.0"

[dev-dependencies]
paste = "1.0.11"
